--- a/public/style.css
+++ b/public/style.css
@@ -66,7 +66,7 @@ template {
 /* Password View */
 
 #password-view-container {
-  position: absolute;
+  position: fixed;
   left: 0px;
   top: 0px;
   display: none;
